--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "build": "parcel build index.html"
   },
   "author": "Tanzeem",
-  "license": "ISC"
+  "license": "ISC",
+  "main": "index.js",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5",
+    "sass": "^1.70.0"
+  }
 }
