--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "license": "ISC",
   "main": "index.js",
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.70.0"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.23.9",
     "core-js": "^3.35.1",
+    "fractional": "^1.0.0",
     "regenerator-runtime": "^0.14.1"
   }
 }
